package pos.payment;

public abstract class Payment {
    public abstract void print(double total);
}
